app/kube/connector-dep.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: nats-connector
    component: nats-connector
  name: nats-connector
  namespace: openfaas
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nats-connector
      component: nats-connector
  template:
    metadata:
      labels:
        app: nats-connector
        component: nats-connector
    spec:
      containers:
      - name: nats-connector
        image: openfaas/nats-connector:0.2.2
        volumeMounts:
            - name: auth
              readOnly: true
              mountPath: "/var/secrets/"
      volumes:
      - name: auth
        secret:
          secretName: basic-auth
