app/kube/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: api-forecast
  namespace: openfaas
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/rewrite-target: "/function/$1"
spec:
  tls:
  - hosts:
    - miniostatic.192.168.0.100.nip.io
  rules:
  - host: miniostatic.192.168.0.100.nip.io
    http:
      paths:
      - path: /api/(get-forecast)
        backend:
          serviceName: gateway
          servicePort: 8080
